--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -73,6 +73,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - batch
   resources:
   - jobs
@@ -88,6 +100,18 @@ rules:
   - k6.io
   resources:
   - k6s
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - prometheuses
   verbs:
   - create
   - delete
