--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -9,11 +9,48 @@ dataGenerator:
   requests.cpu: 1
   limits.cpu: 1
 plantdCore:
-  kubeProxyImage: "docker.io/datawindtunnel/kube-frontend-proxy:latest"
-  frontendImage: "docker.io/datawindtunnel/frontend:latest"
-  prometheusObjectName: "prometheus"
-  prometheusMetricLabelSelector: "plantd-metrics-endpoint"
-  prometheuDefaultScrapInterval: "15s"
+  kubeProxy:
+    image: docker.io/datawindtunnel/kube-frontend-proxy:2
+    label: 
+      app: kube-proxy
+    selector: 
+      key: app
+      value: kube-proxy
+    containerName: kube-proxy
+    replicas: 1,
+    deploymentName: kube-proxy-deployment
+    serviceName: kube-proxy-service
+    port: 5000
+    targetPort: 5000
+  studio:
+    image: docker.io/datawindtunnel/frontend:latest
+    label: 
+      app: frontend
+    selector: 
+      key: app
+      value: frontend
+    containerName: frontend
+    replicas: 1,
+    deploymentName: frontend-deployment
+    serviceName: frontend-service
+    portName: http
+    port: 80
+    targetPort: 80
+  prometheus:
+    name: prometheus
+    serviceAccountname: prometheus
+    resourceMemory: 1G
+    scrapeInterval: 15s
+    clusteRoleName: plantd-prometheus-role
+    clusterRoleBindingName: plantd-prometheus-role-binding
+    selector:
+      key: component
+      value: plantd-metrics-endpoint
+    service:
+      port: 9090
+      nodePort: 30900
+    selector:
+      prometheus: prometheus
 k6:
   arguments: --out experimental-prometheus-rw
   remoteWriteURL:
