--- a/config/crd/bases/windtunnel.plantd.org_experiments.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_experiments.yaml
@@ -21,6 +21,9 @@ spec:
     - jsonPath: .status.duration
       name: Duration
       type: string
+    - jsonPath: .status.startTime
+      name: StartTime
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
