--- a/bundle.yaml
+++ b/bundle.yaml
@@ -4813,6 +4813,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - namespaces
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - nodes
   verbs:
   - get
@@ -5340,7 +5348,6 @@ spec:
         runAsNonRoot: true
       serviceAccountName: plantd-operator-controller-manager
       terminationGracePeriodSeconds: 10
----
 ---
 apiVersion: v1
 kind: Namespace
