--- a/.github/workflows/release-ghcr.yaml
+++ b/.github/workflows/release-ghcr.yaml
@@ -11,6 +11,9 @@ env:
   IMAGE_NAME_PLANTD_PROXY: ${{ github.repository_owner }}/plantd-proxy
   IMAGE_NAME_DATA_GENERATOR: ${{ github.repository_owner }}/datagenerator
   IMAGE_NAME_COST_EXPORTER: ${{ github.repository_owner }}/costexporter
+  DOCKER_IMAGE_TAGS: |
+    type=raw,value=latest
+    type=semver,pattern={{version}}
   DOCKER_PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
@@ -33,9 +36,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PLANTD_CONTROLLER }}
-          tags: |
-            type=raw,value=latest
-            type=semver,pattern={{version}}
+          tags: ${{ env.DOCKER_IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -65,9 +66,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_PLANTD_PROXY }}
-          tags: |
-            type=raw,value=latest
-            type=semver,pattern={{version}}
+          tags: ${{ env.DOCKER_IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
@@ -98,48 +97,13 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_DATA_GENERATOR }}
-          tags: |
-            type=raw,value=latest
-            type=semver,pattern={{version}}
+          tags: ${{ env.DOCKER_IMAGE_TAGS }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           file: build/Dockerfile.DataGenerator
-          context: .
-          platforms: ${{ env.DOCKER_PLATFORMS }}
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-  build-and-push-cost-exporter:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Log in to the container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME_COST_EXPORTER }}
-          tags: |
-            type=raw,value=latest
-            type=semver,pattern={{version}}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          file: build/Dockerfile.CostExporter
           context: .
           platforms: ${{ env.DOCKER_PLATFORMS }}
           push: true
