fix: correct replica number in plantdcore status and rename variables

--- a/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
+++ b/config/crd/bases/windtunnel.plantd.org_plantdcores.yaml
@@ -14,7 +14,17 @@ spec:
     singular: plantdcore
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.kubeProxyStatus
+      name: KubeProxyStatus
+      type: string
+    - jsonPath: .status.studioStatus
+      name: StudioStatus
+      type: string
+    - jsonPath: .status.prometheusStatus
+      name: PrometheusStatus
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: PlantDCore is the Schema for the plantdcores API
@@ -98,7 +108,7 @@ spec:
             description: PlantDCoreStatus defines the observed state of PlantDCore
             properties:
               kubeProxyStatus:
-                description: KubeProxyStatus shows the status of the PlantD Kube Proxy
+                description: ProxyStatus shows the status of the PlantD Proxy
                 type: string
               prometheusStatus:
                 description: PrometheusStatus shows the status of the Prometheus
