fix: update prometheus url in config.yaml

--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -60,7 +60,9 @@ k6:
   arguments: --out experimental-prometheus-rw
   remoteWriteURL:
     name: K6_PROMETHEUS_RW_SERVER_URL
-    value: http://prometheus.plantd-operator-system.svc.cluster.local:9090/api/v1/write
+    # Ensure Prometheus service name, namespace, and port are correct
+    value: http://prometheus-service.plantd-operator-system.svc.cluster.local:9090/api/v1/write
+  # Sync with `apps/loadgen/http_with_data.js`
   script.http.withData: |
     import http from 'k6/http';
     import { check } from 'k6';
@@ -94,6 +96,7 @@ k6:
         'status was 200': (r) => r.status === 200,
       });
     }
+  # Sync with `apps/loadgen/http_with_dataset.js`
   script.http.withDataSet: |
     import http from 'k6/http';
     import { check } from 'k6';
@@ -226,5 +229,6 @@ monitor:
   jobLabel: experiment
 database:
   prometheus:
-    url: http://prometheus.plantd-operator-system.svc.cluster.local:9090
+    # Ensure Prometheus service name, namespace, and port are correct
+    url: http://prometheus-service.plantd-operator-system.svc.cluster.local:9090
     scrapeInterval: 15s
