initializing digital twin resources

--- a/config/plantd/config.yaml
+++ b/config/plantd/config.yaml
@@ -1,6 +1,14 @@
 name: plantd
 version: 1.0.0
 pvc.requests.storage: 10Gi
+costService:
+  image: docker.io/datawindtunnel/aws-cost-service:v0.0.3
+  requests.cpu: 300m
+  limits.cpu: 500m
+digitalTwin:
+  image: docker.io/datawindtunnel/aws-cost-service:v0.0.3
+  requests.cpu: 300m
+  limits.cpu: 500m
 dataGenerator:
   path: /test # Default path where k6 looks for the files
   image: ghcr.io/carnegiemellon-plantd/datagenerator:latest
