--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - bases/windtunnel.plantd.org_pipelines.yaml
 - bases/windtunnel.plantd.org_experiments.yaml
 - bases/windtunnel.plantd.org_costexporters.yaml
+- bases/windtunnel.plantd.org_digitaltwins.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -21,6 +22,7 @@ patches:
 #- path: patches/webhook_in_pipelines.yaml
 #- path: patches/webhook_in_experiments.yaml
 #- path: patches/webhook_in_costexporters.yaml
+#- patches/webhook_in_digitaltwins.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -32,6 +34,7 @@ patches:
 #- path: patches/cainjection_in_pipelines.yaml
 #- path: patches/cainjection_in_experiments.yaml
 #- path: patches/cainjection_in_costexporters.yaml
+#- patches/cainjection_in_digitaltwins.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
