fixing cost exporter and digital twin

--- a/config/samples/windtunnel_v1alpha1_costexporter.yaml
+++ b/config/samples/windtunnel_v1alpha1_costexporter.yaml
@@ -9,4 +9,8 @@ metadata:
     app.kubernetes.io/created-by: plantd-operator
   name: costexporter-sample
 spec:
-  # TODO(user): Add fields here
+  s3Bucket: cost-logging
+  cloudServiceProvider: aws
+  secretRef:
+    name: csp-credentials
+    namespace: default
