--- a/config/samples/windtunnel_v1alpha1_digitaltwin.yaml
+++ b/config/samples/windtunnel_v1alpha1_digitaltwin.yaml
@@ -9,4 +9,6 @@ metadata:
     app.kubernetes.io/created-by: plantd-operator
   name: digitaltwin-sample
 spec:
-  # TODO(user): Add fields here
+  modelType: "quickscaling"
+  loadPatternNames: "ubi-chris-test.loadpattern"
+  experimentNames: "ubi-chris-test.experiment-good-test"
